# v_engine

./: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile  README.md  app.cpp  app.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  game_object.cpp  game_object.hpp  gui.cpp  gui.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  movement_controller.cpp  movement_controller.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  run.bat  run.sh  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  test.txt  texture.cpp  texture.hpp  utils.hpp  window.cpp  window.hpp
libs/imgui/: CMakelists.txt
shaders/: simple_shader.frag  simple_shader.vert
